@@ -1,0 +1,4 @@
+public interface ISetupCardList
+{
+    void SetCardList(CardList cardList);
+}
