@@ -1,8 +1,9 @@
-[gd_scene load_steps=4 format=3 uid="uid://54vx7214u53f"]
+[gd_scene load_steps=5 format=3 uid="uid://54vx7214u53f"]
 
 [ext_resource type="Script" uid="uid://dg7uwa2tvdn5o" path="res://Board/InputProvider.cs" id="1_mnfo1"]
 [ext_resource type="PackedScene" uid="uid://cuqm30mdbu41k" path="res://Board/Board.tscn" id="2_g4tnu"]
 [ext_resource type="PackedScene" uid="uid://dt60jvmuuttc0" path="res://HUD/SelectCardsFromHand.tscn" id="3_g4tnu"]
+[ext_resource type="PackedScene" uid="uid://cl0t7q61is3ro" path="res://HUD/CardList.tscn" id="4_3v0st"]
 
 [node name="InputProviderComponent" type="Control"]
 layout_mode = 3
@@ -34,3 +35,8 @@ offset_left = -405.0
 offset_top = -214.5
 offset_right = 405.0
 offset_bottom = 214.5
+
+[node name="CardListComponent" parent="HUD" instance=ExtResource("4_3v0st")]
+unique_name_in_owner = true
+visible = false
+layout_mode = 1
